--- a/src/WebApplication3/appsettings.json
+++ b/src/WebApplication3/appsettings.json
@@ -1,6 +1,6 @@
-﻿{
+{
   "ApplicationInsights": {
-    "InstrumentationKey": ""
+    "InstrumentationKey": "6fd54964-aee4-4b1b-8184-3b51d18a2743"
   },
   "Logging": {
     "IncludeScopes": false,
